k8s-yaml/traefik/ingressrouter/04-ingressroutes.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`test.tv`) && PathPrefix(`/notls`)
    kind: Rule
    services:
    - name: whoami
      port: 80
    #middlewares:
    #- name: test-auth

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`test.tv`) # && PathPrefix(`/tls`)
    kind: Rule
    services:
    - name: whoami
      port: 80
  tls:
    # certResolver: myresolver
    secretName: test.tv
